[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdts-ssl-generator"
version = "1.0.1"
dependencies = [
    "Flask==2.2.2",
    "gunicorn==20.1.0",
    "Flask-Limiter==2.6.2",
    "acme==2.0.0",
    "josepy==1.13.0",
    "cryptography==38.0.4",
    "Werkzeug==2.2.2",
    "Jinja2==3.1.2"
] 